<resources>
    <string name="app_name">DesafioFirebase</string>
    <string name="splash_image">splash image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="create_account">Create Account</string>
    <string name="remember">Remember</string>
    <string name="log_in">Log in</string>
    <string name="password_cannot_be_null">Por favor, digite uma senha!</string>
    <string name="must_contain_at_least_6_characters">A senha deve conter mais de 6 caracteres</string>
    <string name="must_be_the_same_as_password">Senha divergente</string>
    <string name="validate_your_email">Valide seu e-mail</string>
    <string name="gameimage">GameImage</string>
    <string name="firebase_challange">Desafio Firebase</string>
    <string name="january_21th">Janeiro de 2021</string>
    <string name="created_at">Created at</string>
    <string name="description">Description</string>
    <string name="save_game">Save game</string>
</resources>