<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="180dp"
    android:layout_height="210dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="6dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <ImageView
        android:id="@+id/imageViewGame"
        android:layout_width="180dp"
        android:layout_height="140dp"
        android:scaleType="centerCrop"
        android:src="@drawable/splash"
        android:contentDescription="@string/gameimage" />

        <TextView
            android:id="@+id/textViewGameName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="10dp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:text="@string/firebase_challange" />

        <TextView
            android:id="@+id/textViewGameDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="10dp"
            android:text="@string/january_21th" />


    </LinearLayout>

</androidx.cardview.widget.CardView>